--- a/app/page/template/_dist/app.htm
+++ b/app/page/template/_dist/app.htm
@@ -259,6 +259,7 @@
 <script src="/script/components/asset/controls/mediaButton.js"></script>
 <script src="/script/components/calling/chooseScreen.js"></script>
 <script src="/script/components/calling/deviceToggleButton.js"></script>
+<script src="/script/components/list/conversationListCell.js"></script>
 <!-- Entities -->
 <script src="/script/message/CallMessageType.js"></script>
 <script src="/script/message/MessageCategory.js"></script>
