--- a/app/page/template/_dist/app.htm
+++ b/app/page/template/_dist/app.htm
@@ -260,6 +260,7 @@
 <script src="/script/components/calling/chooseScreen.js"></script>
 <script src="/script/components/calling/deviceToggleButton.js"></script>
 <script src="/script/components/list/conversationListCell.js"></script>
+<script src="/script/components/list/groupAvatar.js"></script>
 <!-- Entities -->
 <script src="/script/message/CallMessageType.js"></script>
 <script src="/script/message/MessageCategory.js"></script>
